<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:titleCondensed="@string/div_principal"
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_menu_cliente"
            android:title="@string/menu_cliente" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_menu_servicos"
            android:title="@string/menu_servicos"/>
        <item
            android:titleCondensed="@string/div_contato"
            android:id="@+id/nav_conato"
            android:icon="@drawable/ic_menu_contato"
            android:title="@string/menu_contato" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_info"
            />
    </group>
</menu>