<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cliente.ClientesFragment" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_titulo_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo_clientes"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/txt_clientes"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_cielo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:text="@string/cielo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/txt_braskem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:text="@string/braskem"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/txt_embraer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:text="@string/embraer"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/txt_natura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:text="@string/natura"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/txt_americanas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:text="@string/americas"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/txt_gerdau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:text="@string/gerdau"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>